--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Lives-of-the-Founders-of-the-British-Museum-Part-2-of-2-With-Notices-of-Its-Chief-Augmentors-__67390
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 67390-h/images/cover.jpg
 creator:
   author:
     agent_name: Edwards, Edward
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/54259
     wikipedia: https://en.wikipedia.org/wiki/Edward_Edwards_(librarian)
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/67390#Lives-of-the-Founders-of-the-British-Museum-Part-2-of-2-With-Notices-of-Its-Chief-Augmentors-_
 gutenberg_issued: '2022-02-17'
 identifiers:
   gutenberg: '67390'
